--- a/restapi/build.gradle
+++ b/restapi/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         minSdkVersion 14
@@ -29,9 +29,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.1'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.rafalzajfert:android-logger:1.1.19'
+    compile 'software.rsquared:android-logger:1.2.0'
 }
 
 Properties properties = new Properties()
@@ -39,12 +39,12 @@ properties.load(project.rootProject.file('local.properties').newDataInputStream(
 
 //gradlew clean build bintrayUpload -PdryRun=false
 publish {
-    userOrg = 'rafalzajfert'
-    groupId = 'com.rafalzajfert'
+    userOrg = 'rsquared'
+    groupId = 'software.rsquared'
     artifactId = 'rest-api'
-    publishVersion = '1.0.8'
+    publishVersion = '1.1.0'
     desc = 'Library for simplify android rest api connecton'
-    website = 'https://github.com/RafalZajfert/RestApi'
+    website = 'https://github.com/rSquared-software/RestApi'
     bintrayUser = properties.getProperty("bintray.oss.user")
     bintrayKey = properties.getProperty("bintray.apikey")
 }
