--- a/restapi/build.gradle
+++ b/restapi/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -27,11 +27,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'software.rsquared:android-logger:1.2.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
+    api 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'software.rsquared:android-logger:1.2.1'
 }
 
 Properties properties = new Properties()
@@ -42,7 +42,7 @@ publish {
     userOrg = 'rsquared'
     groupId = 'software.rsquared'
     artifactId = 'rest-api'
-    publishVersion = '1.1.20'
+    publishVersion = '1.1.22'
     desc = 'Library to simplify android rest api connecton'
     website = 'https://github.com/rSquared-software/RestApi'
     bintrayUser = properties.getProperty("bintray.oss.user")
