--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
         }
     }
 
+
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+    }
     packagingOptions {
         exclude 'META-INF/LICENSE'
     }
@@ -32,6 +37,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'software.rsquared:android-logger:1.2.1'
+    implementation 'software.rsquared:android-logger:1.3.3'
     implementation project(':restapi')
 }
