--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
+//    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'software.rsquared:android-logger:1.3.3'
