--- a/restapi-livedata/build.gradle
+++ b/restapi-livedata/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 27
@@ -35,19 +35,22 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:support-annotations:27.0.2'
+    compile "android.arch.lifecycle:livedata:1.1.0"
+
+    implementation project(':restapi')
 }
 
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
 //gradlew clean build bintrayUpload -PdryRun=false
-publish {
-    userOrg = 'rsquared'
-    groupId = 'software.rsquared'
-    artifactId = 'rest-api-livedata'
-    publishVersion = '1.2.2'
-    desc = 'Library to simplify android rest api connecton'
-    website = 'https://github.com/rSquared-software/RestApi'
-    bintrayUser = properties.getProperty("bintray.oss.user")
-    bintrayKey = properties.getProperty("bintray.apikey")
-}
+//publish {
+//    userOrg = 'rsquared'
+//    groupId = 'software.rsquared'
+//    artifactId = 'rest-api-livedata'
+//    publishVersion = '1.2.2'
+//    desc = 'Library to simplify android rest api connecton'
+//    website = 'https://github.com/rSquared-software/RestApi'
+//    bintrayUser = properties.getProperty("bintray.oss.user")
+//    bintrayKey = properties.getProperty("bintray.apikey")
+//}
