--- a/restapi/build.gradle
+++ b/restapi/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 27
@@ -28,6 +29,19 @@ android {
         abortOnError false
     }
 
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.rSquared-software'
+                artifactId = 'RestApi'
+                version = '1.2.5'
+            }
+        }
+    }
 }
 
 dependencies {
