--- a/restapi/build.gradle
+++ b/restapi/build.gradle
@@ -1,5 +1,8 @@
-apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'maven-publish'
+}
 
 android {
     compileSdkVersion 27
@@ -35,10 +38,10 @@ afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
-                from components.findByName('release')
+                from components.release
                 groupId = 'com.github.rSquared-software'
                 artifactId = 'RestApi'
-                version = '1.2.6'
+                version = '1.2.7'
             }
         }
     }
