--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'software.rsquared:android-logger:1.3.4'
+    implementation 'com.github.rSquared-software:AndroidLogger:1.3.4'
     implementation project(':restapi')
 }
